fix spacing

--- a/components/product-showcase/ProductShowcase.module.scss
+++ b/components/product-showcase/ProductShowcase.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 7.15vh;
-  padding-bottom: 13.54vh;
+  padding-bottom: 6.54vh;
 
   @media (min-width: 1024px) {
     display: grid;
